Fixed issue with vertical scrollbars not showing

--- a/css/general.css
+++ b/css/general.css
@@ -19,7 +19,7 @@ body{
 	font-family: Arial,  Verdana, Helvetica, sans-serif;
 	margin:0pt;
 	cursor:default;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 html,body{
 	height:100%;
